# controller/service/common.go
@@ -1,0 +1,7 @@
+package service
+
+type Common struct {
+	UserAPI *User `inject:""`
+	RoleAPI *Role `inject:""`
+	MenuAPI *Menu `inject:""`
+}
